--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -33,7 +33,14 @@ jobs:
       run: docker build -t devsecops-app .
 
     - name: Push Docker image to Docker Hub
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker tag devsecops-app ${{ secrets.DOCKER_USERNAME }}/devsecops-app:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/devsecops-app:latest
+        if [[ -z "$DOCKER_USERNAME" || -z "$DOCKER_PASSWORD" ]]; then
+          echo "Error: Docker credentials are missing."
+          exit 1
+        fi
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        docker tag devsecops-app $DOCKER_USERNAME/devsecops-app:latest
+        docker push $DOCKER_USERNAME/devsecops-app:latest
